feat: add new section to home page

--- a/MuscleMate/src/pages/index.module.css
+++ b/MuscleMate/src/pages/index.module.css
@@ -19,12 +19,16 @@
   .heroBanner {
     padding: 2rem;
   }
+  .buttons {
+    flex-direction: column;
+  }
 }
 
 .buttons {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
 }
 
 .heroImage {
