--- a/MuscleMate/src/css/custom.css
+++ b/MuscleMate/src/css/custom.css
@@ -17,26 +17,43 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }*/
 :root {
-  --ifm-color-primary: #33658a;
-  --ifm-color-primary-dark: #21b28a;
-  --ifm-color-primary-darker: #269f8a;
-  --ifm-color-primary-darkest: #2a8c8a;
-  --ifm-color-primary-light: #18D98A;
-  --ifm-color-primary-lighter: #18D98A;
-  --ifm-color-primary-lightest: #0fff8a;
+  --ifm-color-primary: #35d900;
+  --ifm-color-primary-dark: #15b920;
+  --ifm-color-primary-darker: #05a920;
+  --ifm-color-primary-darkest: #009960;
+  --ifm-color-primary-light: #35d910;
+  --ifm-color-primary-lighter: #45e900;
+  --ifm-color-primary-lightest: #55ff33;
 
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+[data-theme="dark"] {
+  --ifm-color-primary: #35d900;
+  --ifm-color-primary-dark: #20c320;
+  --ifm-color-primary-darker: #1db830;
+  --ifm-color-primary-darkest: #009810;
+  --ifm-color-primary-light: #3aef00;
+  --ifm-color-primary-lighter: #3dfa00;
+  --ifm-color-primary-lightest: #53ff1b;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+.hero p {
+  font-size: 1.4rem;
+}
+
+.hero .icon {
+  display: inline-block;
+  background-color: var(--ifm-color-primary);
+  padding: 0.5rem;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  height: fit-content;
+}
+
+.hero .icon svg {
+  /* margin: 1.5rem; */
 }
