feat: placeholder pricing cards

--- a/MuscleMate/src/css/custom.css
+++ b/MuscleMate/src/css/custom.css
@@ -74,3 +74,38 @@
 .medium-img {
   height: 24rem;
 }
+
+.card {
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 5px 15px;
+  margin: 1rem;
+  padding: 0;
+}
+
+.card__header {
+  padding: 1.5rem !important;
+}
+
+.card__body {
+  text-align: left;
+  padding: 2.5rem;
+}
+
+.card-list {
+  gap: 4rem;
+}
+
+.standard-plan {
+  background: linear-gradient(10deg, #afff7e, #dbffaa);
+}
+.premium-plan {
+  background: linear-gradient(10deg, #dfbc80, #ffeb90);
+}
+
+.pricing-features {
+  list-style-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='2em' height='2em' viewBox='0 0 12 12'%3E%3Cpath fill='%23000' d='M9.765 3.205a.75.75 0 0 1 .03 1.06l-4.25 4.5a.75.75 0 0 1-1.075.015L2.22 6.53a.75.75 0 0 1 1.06-1.06l1.705 1.704l3.72-3.939a.75.75 0 0 1 1.06-.03'/%3E%3C/svg%3E");
+}
+
+.no-bg {
+  background: none;
+}
