--- a/MuscleMate/src/css/custom.css
+++ b/MuscleMate/src/css/custom.css
@@ -54,6 +54,7 @@
   width: 4rem;
   align-items: center;
   justify-content: center;
+  font-size: 2rem;
 }
 
 .list-item {
@@ -62,9 +63,10 @@
   align-items: center;
 }
 
-.hero iconify-icon {
-  /* margin: 1.5rem; */
-  font-size: 2.3rem;
+.icon {
+  flex-shrink: 0;
+  font-size: 1.6rem;
+  color: var(--ifm-color-primary-dark);
 }
 
 .secondary-bg {
@@ -103,7 +105,9 @@
 }
 
 .pricing-features {
-  list-style-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='2em' height='2em' viewBox='0 0 12 12'%3E%3Cpath fill='%23000' d='M9.765 3.205a.75.75 0 0 1 .03 1.06l-4.25 4.5a.75.75 0 0 1-1.075.015L2.22 6.53a.75.75 0 0 1 1.06-1.06l1.705 1.704l3.72-3.939a.75.75 0 0 1 1.06-.03'/%3E%3C/svg%3E");
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .no-bg {
